Added tmi and reprojection example

--- a/learning/MakiServer/app/templates/base.html
+++ b/learning/MakiServer/app/templates/base.html
@@ -13,12 +13,14 @@
             MakiPortal:
             <a href="/index">Home</a>
             <a href="/login">Login</a>
+            <a href="/maki?d=-1">tmi</a>
             <a href="/maki?d=0">dx</a>
             <a href="/maki?d=1">dy</a>
             <a href="/maki?d=2">dz</a>
             <a href="/maki?d=3">dxy</a>
             <a href="/maki?d=4">dxyz</a>
-            <a href="/maki?d=5">dtilt</a>
+            <a href="/maki?d=5">tilt_angle</a>
+            <a href="/maki?cs=WGS%2084&d=-1">lon-lat</a>
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
